Fix small overflow.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -83,10 +83,6 @@
   margin-bottom: 200px;
 }
 
-#background-elements {
-  overflow-x: hidden;
-}
-
 /* ================ */
 /* IMAGES AND SPLASH CONTENT */
 /* ================ */
